// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Accesibility component Global 1`] = `
<container-stub>
  <template>
    <accessibility-status-stub
      issues="1"
      score="0"
      warnings="0"
    />
  </template>
   
  <!---->
   
  <accessibility-item-stub
    data="[object Object]"
  />
   
  <template>
    <filter-item-stub
      filtercategories="Errors"
    />
  </template>
</container-stub>
`;

exports[`Testing Accesibility component With data, score 100 1`] = `
<container-stub>
  <template>
    <h3
      class="text--success text--center text--strong mb0"
    >
      
      No accessibility issues found.
    
    </h3>
  </template>
   
  <!---->
   
  <accessibility-item-stub
    data="[object Object]"
  />
   
  <template>
    <filter-item-stub
      filtercategories="Errors"
    />
  </template>
</container-stub>
`;

exports[`Testing Accesibility component With data, score under 100 1`] = `
<container-stub>
  <template>
    <accessibility-status-stub
      issues="1"
      score="72"
      warnings="0"
    />
  </template>
   
  <!---->
   
  <accessibility-item-stub
    data="[object Object]"
  />
   
  <template>
    <filter-item-stub
      filtercategories="Errors"
    />
  </template>
</container-stub>
`;
